添加自动迁移

--- a/GcStatistics.Sys/testApi.html
+++ b/GcStatistics.Sys/testApi.html
@@ -14,7 +14,7 @@
             jQuery.support.cors = true;
             $('#btn').click(function () {
                 $.ajax({
-                    url: 'http://localhost:58392/api/values?key=E10ADC3949BA59ABBE56E057F20F883E',
+                    url: 'http://localhost:58392/api/Statistical?key=3b9851aa307bb5374fcff13013ee0240',
                     type: 'get',
                     dataType: 'json',
                     success: function (data) {
